digital-workspace/4.0/index.md
---
title: Alfresco Digital Workspace
---
Alfresco Digital Workspace is a new content management application built with the Alfresco Application Development Framework (ADF). The user interface has been streamlined making simple tasks such as uploading, downloading, searching for content, and collaborating with others much easier. You can create public, moderated, and private libraries. Access for other users to these libraries can be configured by setting permissions, at an individual or group level. Libraries can be added to your favorites list so they can be accessed easily. The search feature is powerful and can be tailored to create customized search forms that can show specific filters based on your metadata. These individualized forms will help you quickly find what you are looking for.

New features introduced in v4.0 include the investment in:

* Responsive design for user experience.
* Design built for accessibility tools.

Alfresco Governance Services functionality for end users is available, including record declaration. Alfresco Process Services processes and tasks can also be accessed and completed from Alfresco Digital Workspace.

You can edit and collaborate with colleagues on existing Microsoft Word, Excel, and PowerPoint files you have stored in Alfresco Content Services (originating from Microsoft Office Online) if you use [Alfresco Collaboration Connector for Microsoft 365]({% link microsoft-365/latest/index.md %}).

The Alfresco Digital Workspace simplifies content management and provides comprehensive extensibility features for developers, using ADF, and allows them to easily and quickly create custom solutions for specific use cases.

The Alfresco Digital Workspace is automatically deployed as part of Alfresco Content Services using Helm charts or a Docker Compose file. You can also manually install Alfresco Content Services using standard WAR files and then configure the installation to include Alfresco Digital Workspace.

{% include media.html id="giypeO8Q4cs" %}

## Web Content Accessibility Guidelines (WCAG) 2.1

The Digital Workspace has been independently tested for its accessibility using the WCAG 2.1 AA, Section 508, and EN 301 standards. It complies with these regulations that ensure an online computer-based system is completely accessible by all of the general public, including those with disabilities. See the following websites for more details:

* [Understanding WCAG 2.1](https://www.gov.uk/service-manual/helping-people-to-use-your-service/understanding-wcag){:target="_blank"}
* [WCAG 2.1 Guidelines](https://www.w3.org/TR/WCAG21){:target="_blank"}
* [Government-wide Section 508 Assessment](https://www.section508.gov/){:target="_blank"}
* [EN 301 549 - Accessibility requirements for ICT products and services](https://www.etsi.org/deliver/etsi_en/301500_301599/301549/03.02.01_60/en_301549v030201p.pdf){:target="_blank"}
